--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>2009-2011</h4>
-                <h4 class="subheading">Our Very Humble Beginnings</h4>
+                <h4>Projelendirme</h4>
+                <h4 class="subheading">İhtiyaç analizi ve çözüm danışmanlığı</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur consectetur!</p>
+                <p class="text-muted">Kurumun soru ve sınav bankası uygulama ve ölçme ihtiyaçları ve karşılık gelen Mitolojix çözümleri belirlenerek en uygun yol haritası belirlenir.</p>
               </div>
             </div>
           </li>
@@ -294,11 +294,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>March 2011</h4>
-                <h4 class="subheading">An Agency is Born</h4>
+                <h4>Pilot</h4>
+                <h4 class="subheading">Pilot Uygulama</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur consectetur!</p>
+                <p class="text-muted">Kurumun ihtiyaçları ve ölçeği doğrultusunda tüm öğrencilere yaygın kullanıma geçiş öncesinde pilot grup üzerinde çalışma veya kademeli devreye alma seçenekleri sunulur.</p>
               </div>
             </div>
           </li>
@@ -308,11 +308,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>December 2012</h4>
-                <h4 class="subheading">Transition to Full Service</h4>
+                <h4>Veri Aktarımı</h4>
+                <h4 class="subheading">Kullanıcı verileri ve soru bankası</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur consectetur!</p>
+                <p class="text-muted">Arzu eden kurumlar için toplu kullanıcı tanımlamaları, soru bankalarının Mitolojix personeli tarafından aktarımı gibi idari hizmetler sunulabilmektedir.</p>
               </div>
             </div>
           </li>
@@ -322,11 +322,25 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>July 2014</h4>
-                <h4 class="subheading">Phase Two Expansion</h4>
+                <h4>Eğitim</h4>
+                <h4 class="subheading">Kullanıcı eğitimleri</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur consectetur!</p>
+                <p class="text-muted">Standart kullanıcı eğitimleri ve arzu edilirse ek olarak Mitolojix özelliklerinin farklı senaryolarda uygulanış biçimlerini kapsayan danışmanlık ve eğitim hizmetleri verilebilmektedir.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-image">
+              <img class="img-circle img-responsive" src="img/mitolojix-logo.jpg" >
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Özelleştirme</h4>
+                <h4 class="subheading">Kuruma has özellikler</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">Talep halinde kurumun özel ihtiyaçları doğrultusunda çözümler geliştirilebilmekte, mevcut bilgi ve eğitim sistemleri ile entegrasyonlar sağlanabilmektedir.</p>
               </div>
             </div>
           </li>
@@ -348,46 +362,34 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Ekip</h2>
-        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet
-                                                  consectetur.</h3>
+        <h3 class="section-subheading text-muted">Mitolojix yönetim kadrosu, Türkiye'nin eğitim teknolojileri ve bilgi sistemlerinde en tecrübeli isimlerini barındırmaktadır.</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
         <div class="team-member">
-          <img src="img/mitolojix-logo.jpg" class="img-responsive img-circle" alt="">
-          <h4>Kay Garland</h4>
-          <p class="text-muted">Lead Designer</p>
+          <img src="img/murat-ulman.jpg" class="img-responsive img-circle" alt="">
+          <h4>Murat Ülman</h4>
+          <p class="text-muted">CEO</p>
           <ul class="list-inline social-buttons">
-            <li><a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li><a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-            </li>
+            <li><a href="https://www.linkedin.com/in/muratulman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-6">
         <div class="team-member">
-          <img src="img/mitolojix-logo.jpg" class="img-responsive img-circle" alt="">
-          <h4>Larry Parker</h4>
-          <p class="text-muted">Lead Marketer</p>
+          <img src="img/birol-uluc.jpg" class="img-responsive img-circle" alt="">
+          <h4>Birol Uluç</h4>
+          <p class="text-muted">CTO</p>
           <ul class="list-inline social-buttons">
-            <li><a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li><a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-            </li>
+            <li><a href="https://www.linkedin.com/in/birol-ulu%25C3%25A7-09073b3a" target="_blank"><i class="fa fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur
-                                    totam corporis ea, alias ut unde.</p>
+        <p class="large text-muted">Deneyimli yöneticilerinin yanısıra; eğitim teknologları, bilgisayar mühendisleri, arayüz tasarım ve deneyim uzmanları ve destek personelinden oluşan geniş bir kadro Mitolojix'in sağlıklı işleyişi ve gelişimi için aralıksız çalışmaktadır.</p>
       </div>
     </div>
   </div>
