--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
         <li><a class="page-scroll" href="#ozellikler">Özellikler</a></li>
         <li><a class="page-scroll" href="#kullanim">Kullanım</a></li>
         <li><a class="page-scroll" href="#hizmetler">Hizmetler</a></li>
-        <li><a class="page-scroll" href="#ekip">Ekip</a></li>
+        <li><a href="img/mitolojix-brosur.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-inverse"></i> Broşür</a></li>
         <li><a class="page-scroll" href="#iletisim">İletişim</a></li>
-        <li><a href="img/mitolojix-brosur.pdf" target="_blank">Broşür</a></li>
+        <li><a href="https://oyun.mitolojix.com" target="_blank"><i class="fa fa-lock fa-inverse"></i> Öğrenci</a></li>
+        <li class="hide-in-mobile"><a href="https://yonetim.mitolojix.com" target="_blank"><i class="fa fa-lock fa-inverse"></i> Öğretmen</a></li>
       </ul>
     </div>
   </div>
@@ -92,8 +93,8 @@
 <header>
   <div class="container">
     <div class="intro-text">
-      <div class="intro-lead-in"><span class="back-stripe">Sınav Uygulamalarında Yeni Dönem!</span></div>
-      <div class="intro-heading"><span class="back-stripe">Öğretici ve Eğlenceli</span></div>
+      <div class="intro-lead-in"><span class="back-stripe">Kalemleri, kağıtları bırakın...</span></div>
+      <div class="intro-heading"><span class="back-stripe">Tüm testlerinizi İnternet'te uygulayın!</span></div>
       <a href="#ozellikler" class="page-scroll">
         <span class="fa-stack fa-4x">
           <i class="fa fa-circle fa-stack-2x scroller"></i>
@@ -109,7 +110,33 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Özellikler</h2>
-        <h3 class="section-subheading text-muted">Sayısı kullanıcı ihtiyaç ve talepleri doğrultusunda her geçen gün artan yüzelerce özellik.</h3>
+        <h3 class="section-subheading text-muted">Mitolojix, okulların ölçme ve değerlendirme ihtiyaçlarına kolay, hızlı ve yaratıcı bir çözüm getiren bir Web 2.0 aracı olarak tasarlandı.</h3>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">Oyun Arayüzü</h4>
+        <p class="text-muted">Öğrenciler testleri  5-8 sınıf düzeyine uygun oyun arayüzünde mühürler kazanmak ve rütbelerini yükseltmek için çözerler.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">Ölçme ve Değerlendirme</h4>
+        <p class="text-muted">Öğrenci, şube, sınıf bazında soru ve test performanslarını değerlendiren detaylı raporlar içerir.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">PC ve Tablet Uyumlu</h4>
+        <p class="text-muted">Öğretmen yönetim ve öğrenci oyun arayüzleri bilgisayar ve tablet cihazlar ile tam uyumludur.</p>
       </div>
     </div>
     <div class="row text-center">
@@ -119,67 +146,41 @@
             <i class="fa fa-question fa-stack-1x fa-inverse"></i>
         </span>
         <h4 class="service-heading">Soru Tipleri</h4>
-        <p class="text-muted">Sınav uygulamalarında bir ilk olan sıralama, eşleştirme ile birlikte 6 değişik soru tipi içerir.</p>
+        <p class="text-muted">Test uygulamalarınıza sıralama, eşleştirme, boşluk doldurma gibi 6 değişik soru tipi ile boyut kazandırır.</p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-check-circle-o fa-stack-1x fa-inverse"></i>
         </span>
-        <h4 class="service-heading">Sınav Tipleri</h4>
-        <p class="text-muted">Evde ve sınıfta uygulanabilecek, öğrenim ve ölçme amaçlı dört farklı sınav tipi.</p>
+        <h4 class="service-heading">Test Tipleri</h4>
+        <p class="text-muted">Değişik ölçme hedefleriniz için, alıştırma, konu tarama, deneme ve canlı sınav seçenekleriyle 4 farklı test tipi içerir.</p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
         </span>
-        <h4 class="service-heading">Detaylı Müfredat</h4>
-        <p class="text-muted">Konu ve kazanımlarına göre ayrıştırılmış detaylı müfredat tanımları ve içerikler kaydedilebilir.</p>
+        <h4 class="service-heading">Müfredat Tanımlama</h4>
+        <p class="text-muted">Ölçme ve değerlendirmede kullanılmak üzere konu ve kazanımları içeren MEB müfredat tanımları kaydedilebilir.</p>
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">İşbirliği Araçları</h4>
-        <p class="text-muted">Öğretmenler soru ve sınavlar üzerinde birlikte çalışabilir ve idareciler süreçleri izleyebilir.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Ayrıntılı Raporlar</h4>
-        <p class="text-muted">Öğrenci, sınıf, sınav ve soru performanslarını değerlendiren detaylı raporlar içerir.</p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-smile-o fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Kullanıcı Dostu</h4>
-        <p class="text-muted">Hem eğitimciler hem de öğrenciler için son derece kolay ve eğlenceli bir kullanım deneyimi sunar.</p>
-      </div>
-    </div>
-    <div class="row text-center">
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-            <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Mobil Tam Uyumlu</h4>
-        <p class="text-muted">Hem öğretmen hem de öğrenci oyun arayüzleri hem bilgisayar hem tablet cihazlar ile tam uyumludur.</p>
-      </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-refresh fa-stack-1x fa-inverse"></i>
         </span>
-        <h4 class="service-heading">Canlı Sistem</h4>
-        <p class="text-muted">Tüm işlemler sayfa ve ekran yenilemeye gerek kalmadan anında bağlı tüm kullanıcılara yansır.</p>
+        <h4 class="service-heading">Evde ve Okulda</h4>
+        <p class="text-muted">Testler öğrencilere belirli tarih aralıklarında ev ödevi olarak verilebilir, okulda tabletler kullanılarak canlı deneme sınavları  yapılabilir.</p>
+      </div>
+      <div class="col-md-4">
+        <span class="fa-stack fa-4x">
+            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+            <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+        </span>
+        <h4 class="service-heading">Ortak Çalışma Araçları</h4>
+        <p class="text-muted">Zümre öğretmenleri soru ve testler üzerinde birlikte çalışabilir, yöneticiler süreçleri izleyebilirler.</p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
@@ -187,7 +188,7 @@
             <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
         </span>
         <h4 class="service-heading">Güvenli Altyapı</h4>
-        <p class="text-muted">Tüm öğrenci, soru ve sınav bilgileri güvenli sunucularda ve erişimi SSL şifreleme altındadır.</p>
+        <p class="text-muted">Tüm öğrenci, soru ve test bilgileri güvenli sunucularda tutulmakta ve erişimi SSL şifreleme ile korunmaktadır.</p>
       </div>
     </div>
   </div>
@@ -213,7 +214,7 @@
         </a>
         <div class="portfolio-caption">
           <h4>Sorular Girin</h4>
-          <p class="text-muted">Mitolojix'e istediğiniz ders için kendi hazırladığınız soruları girin</p>
+          <p class="text-muted">Mitolojix'e istediğiniz ders için kendi hazırladığınız soruları girin.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 portfolio-item">
@@ -227,8 +228,8 @@
                alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Sınav Oluşturun</h4>
-          <p class="text-muted">Sorularınızla, internet üzerinde bir sınav oluşturun</p>
+          <h4>Test Oluşturun</h4>
+          <p class="text-muted">Sorularınızla, İnternet üzerinde bir test oluşturun.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 portfolio-item">
@@ -241,8 +242,8 @@
           <img src="img/3.jpg" class="img-responsive" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Öğrenciler Katılsın</h4>
-          <p class="text-muted">Öğrenciler sınavı tamamlayarak mühürler ve rütbeler kazansınlar</p>
+          <h4>Öğrenciler Çözsün</h4>
+          <p class="text-muted">Öğrenciler testi çözerek mühürler ve rütbeler kazansınlar.</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 portfolio-item">
@@ -256,7 +257,7 @@
         </a>
         <div class="portfolio-caption">
           <h4>Ölçümleyin</h4>
-          <p class="text-muted">Sınav sonuçlarının detaylı analiz raporlarını alın</p>
+          <p class="text-muted">Test sonuçlarının detaylı analiz raporlarını alın.</p>
         </div>
       </div>
     </div>
@@ -268,7 +269,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Hizmetler</h2>
-        <h3 class="section-subheading text-muted">İnceleme ve karar aşamasından, günlük kullanıma, eğitim dönemi başlangıcından yıl sonuna dek Mitolojix ekibi her an desteğe hazır durumdadır.</h3>
+        <h3 class="section-subheading text-muted">İnceleme ve karar aşamasından günlük kullanıma, eğitim dönemi başlangıcından yıl sonuna dek Mitolojix ekibi her an desteğe hazırdır.</h3>
       </div>
     </div>
     <div class="row">
@@ -284,7 +285,7 @@
                 <h4 class="subheading">İhtiyaç analizi ve çözüm danışmanlığı</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Kurumun soru ve sınav bankası uygulama ve ölçme ihtiyaçları ve karşılık gelen Mitolojix çözümleri belirlenerek en uygun yol haritası belirlenir.</p>
+                <p class="text-muted">Kurumun ölçme ve değerlendirme ihtiyaçları ve bunlara karşılık gelen Mitolojix çözümleri belirlenerek en uygun yol haritası belirlenir.</p>
               </div>
             </div>
           </li>
@@ -298,7 +299,7 @@
                 <h4 class="subheading">Pilot Uygulama</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Kurumun ihtiyaçları ve ölçeği doğrultusunda tüm öğrencilere yaygın kullanıma geçiş öncesinde pilot grup üzerinde çalışma veya kademeli devreye alma seçenekleri sunulur.</p>
+                <p class="text-muted">Kurumun ihtiyaçları ve ölçeği doğrultusunda, okul bazında yaygın kullanıma geçiş öncesinde pilot grup üzerinde çalışma veya kademeli devreye alma seçenekleri sunulur.</p>
               </div>
             </div>
           </li>
@@ -312,7 +313,7 @@
                 <h4 class="subheading">Kullanıcı verileri ve soru bankası</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Arzu eden kurumlar için toplu kullanıcı tanımlamaları, soru bankalarının Mitolojix personeli tarafından aktarımı gibi idari hizmetler sunulabilmektedir.</p>
+                <p class="text-muted">Talep eden kurumlar için toplu kullanıcı tanımlamaları, soru bankalarının aktarımı, öğretmen soru ve testlerinin sisteme girilmesi gibi destek hizmetleri sunulabilmektedir.</p>
               </div>
             </div>
           </li>
@@ -344,52 +345,7 @@
               </div>
             </div>
           </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>Başka
-                <br>bir
-                <br>arzunuz?</h4>
-            </div>
-          </li>
         </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="ekip" class="bg-light-gray">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Ekip</h2>
-        <h3 class="section-subheading text-muted">Mitolojix yönetim kadrosu, Türkiye'nin eğitim teknolojileri ve bilgi sistemlerinde en tecrübeli isimlerini barındırmaktadır.</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="team-member">
-          <img src="img/murat-ulman.jpg" class="img-responsive img-circle" alt="">
-          <h4>Murat Ülman</h4>
-          <p class="text-muted">CEO</p>
-          <ul class="list-inline social-buttons">
-            <li><a href="https://www.linkedin.com/in/muratulman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="team-member">
-          <img src="img/birol-uluc.jpg" class="img-responsive img-circle" alt="">
-          <h4>Birol Uluç</h4>
-          <p class="text-muted">CTO</p>
-          <ul class="list-inline social-buttons">
-            <li><a href="https://www.linkedin.com/in/birol-ulu%25C3%25A7-09073b3a" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <p class="large text-muted">Deneyimli yöneticilerinin yanısıra; eğitim teknologları, bilgisayar mühendisleri, arayüz tasarım ve deneyim uzmanları ve destek personelinden oluşan geniş bir kadro Mitolojix'in sağlıklı işleyişi ve gelişimi için aralıksız çalışmaktadır.</p>
       </div>
     </div>
   </div>
