--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/agency.css" rel="stylesheet">
+  <link href="css/agency.min.css?v=2.0" rel="stylesheet">
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -503,8 +503,8 @@
 <script src="js/classie.js"></script>
 <script src="js/cbpAnimatedHeader.js"></script>
 <script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
-<script src="js/agency.js"></script>
+<script src="js/contact_me.js?v=2.0"></script>
+<script src="js/agency.js?v=2.0"></script>
 
 </body>
 
